--- a/index.html
+++ b/index.html
@@ -3,44 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>feed</title>
   </head>
   <style>
-        .biank {
-          background-color: rgb(255, 255, 255);
-        }
-        .flex1 {
-          flex: 1;
-        }
-        .flex {
-          display: flex;
-        }
-        body {
-          margin: 0;
-          /* vh 是view height 既视窗高度的意思，100就是100%占满窗口高度 */
-          height: 100vh;
-          background-color: #cbc5c5eb;
-        }
-        .yinYing {
-            box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px,
-              rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
-          }
-          .press{
-            background-color: rgb(255, 255, 255);
-            border-top-style: none;
-            border-left: none;
-            border-right: none;
-            border-bottom-color: #fc0000;
-            border-bottom-width: 5px;
-          }
-    .xuanzhong{
-            background-color: #cbc5c5eb;
-          }
-          @media (max-width: 600px) {
+    .biank {
+      background-color: rgb(255, 255, 255);
+    }
+    .flex1 {
+      flex: 1;
+    }
+    .flex {
+      display: flex;
+    }
+    body {
+      margin: 0;
+      /* vh 是view height 既视窗高度的意思，100就是100%占满窗口高度 */
+      height: 100vh;
+      background-color: #cbc5c5eb;
+    }
+    .yinYing {
+      box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px,
+        rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
+    }
+    .press {
+      background-color: rgb(255, 255, 255);
+      border-top-style: none;
+      border-left: none;
+      border-right: none;
+      border-bottom-color: #fc0000;
+      border-bottom-width: 5px;
+    }
+    .xuanzhong {
+      background-color: #cbc5c5eb;
+    }
+    .lieBiaoXiang {
+      height: 200px;
+    }
+    .xuanzhong {
+      background-color: #cbc5c5eb;
+    }
+    .baiSe {
+      background-color: #ffffff;
+    }
+    .shuJu {
+      height: 430px;
+    }
+    .flex1 {
+      flex: 1;
+    }
+    .column {
+      flex-direction: column;
+    }
+    .lieBiaoXiang {
+      height: 200px;
+    }
+    .flex {
+      display: flex;
+    }
+    @media (max-width: 600px) {
+    }
 
-            .press {
-              flex-direction: column;
-          }
+    .press {
+      flex-direction: column;
+    }
   </style>
   <body>
     <!--头部栏-->
@@ -146,22 +171,18 @@
         </button></a
       >
     </div>
-    <a
-      style="margin-left: 50px"
-      href="https://imgse.com/i/pkIVQIK"
-      class="yinYing"
-      href="https://imgse.com/i/pkIVrRg"
-      ><img
-        src="https://s21.ax1x.com/2024/07/16/pkIVrRg.jpg"
-        alt="pkIVrRg.jpg"
-        border="10px"
-        style="
-          border-color: aliceblue;
-          margin: 150px;
-          width: 400px;
-          margin-left: 600px;
-        "
-        class="yinYing"
-    /></a>
+    <div
+      class="lieBiaoXiang mgt8 baiSe yinYing"
+      style="
+        margin-bottom: 10px;
+        font-size: 40px;
+        font-weight: 1000px;
+        line-height: 5;
+        padding-left: 700px;
+        margin-top: 20px;
+      "
+    >
+      尚未开发完毕
+    </div>
   </body>
 </html>
